# algo_projekti

./: .coveragerc  .gitignore  README.md  pyproject.toml  tasks.py
application/: __init__.py  main.py
conversion/: converter.py
data_structures/: node.py  trie.py
documentation/: Viikkoraportti_1.md  Viikkoraportti_2.md  Viikkoraportti_3.md  Viikkoraportti_4.md  Viikkoraportti_5.md  Viikkoraportti_6.md  Viikkorapotti_1.md  completition_documentation.md  manual.md  requirement_spesification.md  test_documentation.md
src/: __init__.py  converter.py  main.py  markov.py
src/conversion/: converter.py
src/data_structures/: node.py  trie.py
src/documentation/: Viikkorapotti_1.md
src/tests/: converter_test.py  integration_test.py  markov_test.py  node_test.py  trie_test.py
src/tests/data/: convert_test_data.txt  integration_test_data.txt
src/ui/: interface.py
src/utils/: config.py  file_operations.py  logger.py
