[tool.poetry]
name = "algo-projekti"
version = "0.1.0"
description = "Music generation application"
authors = ["Tommi Kiiski <kiiski.tommi@hotmail.com>"]
readme = "README.md"
packages = [{include = "algo_projekti"}]

[tool.poetry.dependencies]
python = "^3.10"
invoke = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"